# Dream-World-IX

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  FORKING_FF9.md  LICENSE  README.md  RELEASE.md  SECURITY.md  SETUP.md  deploy-dashboard.html
.github/: PULL_REQUEST_TEMPLATE.md
apps/: campaign_editor.pyw  ff9_build_gui.pyw  ff9_dialogue.pyw  ff9_import.pyw  ff9_infohub.pyw  ff9_items.pyw  ff9_storystate.pyw  ff9_studio.pyw  ff9_workspace.pyw
ff9mapkit/: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml
ff9mapkit/blender/: README.md  build_addon.py
ff9mapkit/blender/ff9mapkit_blender/: __init__.py  blender_manifest.toml  bridge.py  ops.py  ui.py
ff9mapkit/blender/tests/: test_battle_blender.py  test_bridge.py  test_choice_preserved.py  test_content_markers.py  test_dryrun.py  test_editable_fork.py  test_scroll_blender.py  test_vendor_sync.py  test_verbatim_fork.py
ff9mapkit/docs/: ARCHETYPES.md  ATE_SYSTEM.md  BATTLE_DESIGN.md  CAMPAIGN_IMPORT.md  DIALOGUE.md  ENGINE.md  FEATURES.md  FORK_FIDELITY.md  FORK_IDGATE_MAP.md  FORK_REPORT.md  FORMAT.md  GLOBAL_RESOURCES.md  GLOSSARY.md  JOURNEYS.md  KNOWN_ISSUES.md  OBJECT_CARRY.md  PIPELINE.md  PLAYER_GRAFT.md  PROVENANCE.md  SAVEPOINT.md  TECHNICAL.md  TEXT_CARRY.md  TROUBLESHOOTING.md  TUTORIAL.md  WALKMESH_EDITING.md  fork_idgate_map.json
ff9mapkit/docs/gallery/: README.md
ff9mapkit/examples/: README.md
ff9mapkit/examples/SHOWCASE/: README.md  showcase.field.toml
ff9mapkit/examples/SHOWCASE/art/: README.txt
ff9mapkit/examples/blender-scroll-room/: README.md
ff9mapkit/examples/capstone/: README.md  capstone.field.toml
ff9mapkit/examples/items-equipment/: README.md  items_equipment.field.toml
ff9mapkit/examples/scroll-demo/: README.md  scroll_demo.field.toml
ff9mapkit/examples/toolkit-test/: .gitignore  revert.py  testroom.field.toml
ff9mapkit/examples/vivi-hut/: README.md  hut_int.field.toml
ff9mapkit/examples/world_hub/: .gitignore  README.md  hub.field.toml  hub_lobby.field.toml  journey_one.field.toml  journey_two.field.toml  journeys.toml
ff9mapkit/ff9mapkit/: __init__.py  __main__.py  _animdb.py  _animdb_all.py  _fieldtable.py  _fieldtext.py  _held_poses.py  _itemdb.py  _modeldb.py  _narrowmap_data.py  _npcparams.py  _regen_animdb.py  _regen_animdb_all.py  _regen_fieldtable.py  _regen_fieldtext.py  _regen_modeldb.py  _regen_npcparams.py  _regen_scenedb.py  _scenedb.py  abilities.py  animations.py  archetypes.py  areatitle.py  battle_bgm.py  binutils.py  build.py  campaign.py  catalog.py  chain.py  cli.py  config.py  deploystack.py  dialogue.py  eblint.py  eventscan.py  extract.py  flags.py  forkreport.py  hub.py  idgated.py  (+17 more)
ff9mapkit/ff9mapkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ff9mapkit/ff9mapkit/battle/: __init__.py  abilityfeatures.py  actiondelta.py  aiauthor.py  ailint.py  aipatch.py  battleai.py  battlecsv.py  battlepatch.py  build.py  camera_codec.py  camera_data.py  characterdelta.py  event_data.py  extract.py  fbx.py  reskin.py  scene_codec.py  scene_data.py  scenelint.py  seqasm.py  seqauthor.py  seqcodec.py  seqdis.py  seqpatch.py
ff9mapkit/ff9mapkit/content/: __init__.py  areatitle.py  ate.py  camera.py  chest.py  choice.py  cutscene.py  encounter.py  entry_settle.py  equipment.py  event.py  gateway.py  inventory.py  itemdata.py  itemtext.py  jump.py  ladder.py  movement.py  music.py  npc.py  object.py  onentry.py  party.py  pathfind.py  platform.py  player.py  prop.py  region.py  reinit.py  savepoint.py  shop.py  startup.py  synthesis.py  text.py  textcarry.py  verbatim.py  walkmesh_hotfix.py
ff9mapkit/ff9mapkit/data/: __init__.py  _regen_provenance.py  reference_arcs.toml  region_catalog.toml
ff9mapkit/ff9mapkit/data/provenance/: blank.es.patch  blank.fr.patch  blank.gr.patch  blank.it.patch  blank.jp.patch  blank.us.patch  manifest.json  region_template.patch
ff9mapkit/ff9mapkit/eb/: __init__.py  _exprtable.py  _membertable.py  _optables.py  _regen_optables.py  cmdasm.py  disasm.py  edit.py  exprasm.py  model.py  opcodes.py
ff9mapkit/ff9mapkit/editor/: __init__.py  app.py  battle_forms.py  breadcrumb.py  dialogs.py  feedback.py  forms.py  graphview.py  jobs.py  model.py  picker.py  theme.py
ff9mapkit/ff9mapkit/scene/: __init__.py  arena.py  bgart.py  bgi.py  bgs.py  bgx.py  cam.py  guide.py  paint.py  placeholder.py
ff9mapkit/ff9mapkit/workspace/: __init__.py  battledoc.py  builddoc.py  forms_qt.py  importdoc.py  mapview.py  palette.py  savedoc.py  shell.py  style.py  tuningdialog.py
ff9mapkit/tests/: conftest.py  test_abilities.py  test_abilityfeatures.py  test_actiondelta.py  test_ai_phase_insert.py  test_ai_phase_insert_adversary.py  test_aiauthor.py  test_ailint.py  test_aipatch.py  test_animations.py  test_archetypes.py  test_areatitle.py  test_arming.py  test_ate.py  test_battle.py  test_battle_bgm.py  test_battle_forms.py  test_battle_scene_codec.py  test_battle_seq.py  test_battleai.py  test_battlecsv.py  test_battlepatch.py  test_bgart.py  test_bgs.py  test_build.py  test_cameras.py  test_campaign.py  test_capstone.py  test_carry_text_lint.py  test_catalog.py  test_chain.py  test_characterdelta.py  test_choice.py  test_cli_entry.py  test_cmdasm.py  test_cmdasm_relocate.py  test_content.py  test_deploy_campaign.py  test_deploystack.py  test_dialogue.py  (+75 more)
memoria-patches/: README.md  deferred-overlay-texture-cache.patch  s12-engine-edits.patch  s12-fade-cache+booster-autoenable.patch  s18-field-reload-hotkey.patch  s21-dev-hotkeys-f6-f10.patch  s22-debug-menu-f6.patch  s23-narrow-map-fork-width.PR.md  s23-narrow-map-fork-width.patch  s24-fork-donor-remap.patch  s29-fork-donor-softlocks.patch  s30-bgx-point-filter.patch  s30-doeventcode-fork-walk.patch  s31-fork-name-keyed-overlay-offset.patch  s32-fork-name-gates.patch  s33-fork-fldmapno-arg-lookups.patch
reference/: field-manifest.tsv
release/: README.md
research/: CENSUS_DIGEST.md  README.md  STORY_FLAGS.md  flag_catalog.toml  flag_census.py  gen_scenario_table.py  gen_understand_layer.py  make_catalog.py  (+1 more)
(+125 files in other folders)
