[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ff9mapkit"
version = "0.9.3"
description = "Author novel custom field maps for Final Fantasy IX (Memoria engine) from a declarative TOML project file."
readme = "README.md"
requires-python = ">=3.11"          # tomllib is stdlib from 3.11
license = { text = "MIT" }
authors = [{ name = "GameJawnsInc" }]
keywords = ["final-fantasy-ix", "ff9", "memoria", "modding", "field", "map"]

# Pillow is the only hard runtime dependency: it composites overlay layers and
# renders the paint guides. Everything else (camera math, .eb/.bgx/.bgi codecs,
# TOML reading) is pure stdlib so the kit runs anywhere Python 3.11+ does.
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/"          # filled in when published
Repository = "https://github.com/"

[project.scripts]
ff9mapkit = "ff9mapkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ff9mapkit*"]

[tool.setuptools.package-data]
# Ship the canonical blank field script + the field-109 region template with the wheel.
ff9mapkit = ["data/*.bin", "data/blank_field/*.bytes"]
