[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ff9mapkit"
version = "0.9.23"
description = "Author novel custom field maps for Final Fantasy IX (Memoria engine) from a declarative TOML project file."
readme = "README.md"
requires-python = ">=3.11"          # tomllib is stdlib from 3.11
license = { text = "MIT" }
authors = [{ name = "GameJawnsInc" }]
keywords = ["final-fantasy-ix", "ff9", "memoria", "modding", "field", "map"]

# Pillow is the only hard runtime dependency: it composites overlay layers and
# renders the paint guides. Everything else (camera math, .eb/.bgx/.bgi codecs,
# TOML reading) is pure stdlib so the kit runs anywhere Python 3.11+ does.
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]
# `ff9mapkit save-edit` (the RECREATE verb) reads/writes FF9's AES-encrypted save; pycryptodome is
# imported lazily, so it's only needed for that command (and the save tests skip without it).
save = ["pycryptodome>=3.10"]

[project.urls]
Homepage = "https://github.com/"          # filled in when published
Repository = "https://github.com/"

[project.scripts]
ff9mapkit = "ff9mapkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ff9mapkit*"]

[tool.setuptools.package-data]
# Ship ONLY our provenance artifacts: the copy/insert patches + manifest (our edits + hashes, never
# game bytes). The blank field + exit-region template + test fixtures are NOT packaged -- they are
# regenerated from the user's own FF9 install by `ff9mapkit extract-templates` (docs/PROVENANCE.md).
# (Deliberately NOT globbing data/*.bin or data/blank_field/ so a wheel can never bundle FF9 bytes,
#  even if a developer has run extract-templates locally.)
ff9mapkit = ["data/provenance/manifest.json", "data/provenance/*.patch"]
