[build-system]
requires = ["setuptools>=77"]          # >=77 for the PEP 639 SPDX `license` string + `license-files`
build-backend = "setuptools.build_meta"

[project]
name = "ff9mapkit"
version = "1.0.0b2"
description = "Author novel custom field maps for Final Fantasy IX (Memoria engine) from a declarative TOML project file."
readme = "README.md"
requires-python = ">=3.11"          # tomllib is stdlib from 3.11
license = "MIT"                        # PEP 639 SPDX expression
license-files = ["LICENSE"]
authors = [{ name = "GameJawnsInc" }]
keywords = ["final-fantasy-ix", "ff9", "memoria", "modding", "field", "map"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Build Tools",
]

# Pillow is the only hard runtime dependency: it composites overlay layers and
# renders the paint guides. Everything else (camera math, .eb/.bgx/.bgi codecs,
# TOML reading) is pure stdlib so the kit runs anywhere Python 3.11+ does.
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
# pytest-xdist (`py -m pytest -n 6`) parallelizes the suite across cores. It's optional -- the suite
# runs serially without it -- but recommended: it cuts wall-clock ~2.6x AND stops a single pytest
# process from being starved 1-vs-N when other work hammers the box. ~6 workers beats `-n auto` here
# (the install-gated tests are disk-bound on the shared p0data bundles, so too many workers re-contend).
dev = ["pytest>=7", "pytest-xdist>=3"]
# `ff9mapkit save-edit` (the RECREATE verb) reads/writes FF9's AES-encrypted save; pycryptodome is
# imported lazily, so it's only needed for that command (and the save tests skip without it).
save = ["pycryptodome>=3.10"]
# The modern PySide6 Workspace shell (apps/ff9_workspace.pyw, Phase 3 of the GUI makeover). Optional --
# the tkinter apps/*.pyw suite is stdlib-only and unaffected; only the Qt shell needs this.
gui = ["PySide6>=6.5"]

[project.urls]
# Project "Dream World IX"; the PyPI package name stays "ff9mapkit".
Homepage = "https://github.com/GameJawnsInc/Dream-World-IX"
Repository = "https://github.com/GameJawnsInc/Dream-World-IX"
Issues = "https://github.com/GameJawnsInc/Dream-World-IX/issues"

[project.scripts]
ff9mapkit = "ff9mapkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ff9mapkit*"]

[tool.setuptools.package-data]
# Ship ONLY provenance-clean, kit-authored data: the copy/insert patches + manifest (our edits + hashes),
# and the curated catalogs (reference_arcs.toml = the disc-1 story spine; region_catalog.toml = the
# split-by-visit zone/field-id groupings the "Browse FF9 regions" picker reads). None contain game bytes.
# The blank field + exit-region template + test fixtures are NOT packaged -- they are regenerated from the
# user's own FF9 install by `ff9mapkit extract-templates` (docs/PROVENANCE.md).
# (Deliberately NOT globbing data/*.bin or data/blank_field/ so a wheel can never bundle FF9 bytes,
#  even if a developer has run extract-templates locally.)
ff9mapkit = ["data/provenance/manifest.json", "data/provenance/*.patch", "data/reference_arcs.toml", "data/region_catalog.toml"]
